--- a/hello.html
+++ b/hello.html
@@ -16,6 +16,8 @@
 		<div id="top-banner">
 					Bienvenue dans cette formation GIT !
 		</div>
-		
+		<div>
+			<p>Hello, I'm learning the git command through this website.</p>
+		</div>
 	</body>
 </html>
