--- a/hello.html
+++ b/hello.html
@@ -16,8 +16,16 @@
 		<div id="top-banner">
 					Bienvenue dans cette formation GIT !
 		</div>
+		<!-- description -->
 		<div>
+			<h1>My description</h1>
 			<p>Hello, I'm learning the git command through this website.</p>
 		</div>
+				<!-- récompense -->
+		<div>
+			<h1>Mes récompenses</h1>
+			<p>en construction ...</p>
+		</div>
+
 	</body>
 </html>
