--- a/hello.html
+++ b/hello.html
@@ -29,6 +29,10 @@
 				<!-- commandes git -->
 		<div>
 			<h1>Mes commandes git</h1>
+			<p> git add .</p>
+			<p> git pull</p>
+			<p> git push</p>
+			<p> git commit -m "comment"</p>
 		</div>
 		
 
